Fix sponsor styles on mobile screens. (#45)

--- a/assets/static/_css/pycascades/pycascades.css
+++ b/assets/static/_css/pycascades/pycascades.css
@@ -639,7 +639,7 @@ footer .links li a:hover {
     margin-right: auto;
 }
 #sponsors .sponsor-logos .item p {
-    font-size: 1.3ex;
+    font-size: 1.3rem;
 }
 
 #sponsors .sponsor-logos .item.diamond .logo,
